Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Nov-11 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ eeschema
  * A wxStdDialogButtonSizer is now used within the "EESchema Colors" dialog box,
    meaning that the sequence of the "OK", "Cancel", and "Apply" buttons within
    that dialog now depends upon which (OS) version of KiCad is being used (and
    thus matching the nature of the corresponding dialogs within Pcbnew and GerbView
    in that regard). (As of yet, the vertical distance between adjacent controls
    does not increase when this dialog is resized, but that aspect will also be
    implemented when time permits.)
+ gerbview
  * The "GerbView Layer Colors:" dialog box has been updated, and is now similar
    in nature to the corresponding dialogs within EESchema and Pcbnew. Tool tips
    have also been provided for the "Show All" and "Show None" buttons.


2007-Nov-10 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
	More comprehensive dialog in netlist plugin interface.
	Eeschema configuration now shows the plugin netlist list


2007-Nov-09 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ 3d-viewer
  * The 3d_canvas.cpp file has been updated to use a const parameter, as suggested
    within (Bug) Request ID 1828487.
+ pcbnew
  * Sizers have now been provided for the "Pcbnew Layer Colors:" dialog box (previously
    identified as the "Colors:" dialog box), and tool tips have been provided for the
    "Show All" and "Show None" buttons.
  * The reglage.cpp file (which is not currently used) has been removed, and replaced
    with reglage.cpp.notused.

